<resources>
    <string name="app_name">Modar Task</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="select">Select</string>
    <string name="error_number_too_low">%1s is too low</string>
    <string name="error_number_too_high">%1s is too high</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_your_age">Select your age</string>
    <string name="age">Age</string>
    <string name="age_number_chooser_suffix">\ year</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select gender</string>
    <string name="save">Save</string>
    <string name="view_data">View Data</string>
    <string name="personal_details">Personal Details</string>
    <string name="please_enter_your_information_below">Please enter your information below</string>
    <string name="job_title">Job Title</string>
    <string name="enter_your_job_title">Enter your job title</string>
    <string name="error_name_empty">Enter name</string>
    <string name="error_age_empty">Select age</string>
    <string name="error_job_title_empty">Enter job title</string>
    <string name="error_gender_empty">Select gender</string>
    <string name="user_inserted_successfully">User inserted successfully.</string>
    <string name="saved_records">Saved Records</string>
    <string name="delete_all">Delete All</string>
    <string name="back">Back</string>
    <string name="there_is_no_saved_users">There is no saved users</string>
    <string name="okay">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="dummy_taost">It\'s %1$s\'s Card</string>
    <string name="year">year</string>
    <string name="age_with_suffix">%1$s %2$s</string>
    <string name="are_you_sure_you_want_to_delete_all_users">Are you sure want to delete all users?</string>
</resources>