<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.CreateUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_title"
            style="@style/InterFontStyleSemiBold600"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/txt_subtitle"
            style="@style/InterFontStyleRegular400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/please_enter_your_information_below"
            android:textColor="@color/grey_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            tools:text="Subtitle" />

        <com.modar.task.ui.component.EditTextComponent
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
            app:text_hint="@string/enter_your_name"
            app:text_inputType="text"
            app:text_label="@string/name" />

        <com.modar.task.ui.component.NumberChooserComponent
            android:id="@+id/nc_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:nc_max="150"
            app:nc_min="1"
            app:nc_suffix="@string/age_number_chooser_suffix"
            app:nc_text_hint="@string/select_your_age"
            app:nc_text_label="@string/age" />

        <com.modar.task.ui.component.EditTextComponent
            android:id="@+id/et_job"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nc_age"
            app:text_hint="@string/enter_your_job_title"
            app:text_inputType="text"
            app:text_label="@string/job_title" />

        <com.modar.task.ui.component.SpinnerComponent
            android:id="@+id/sp_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_job"
            app:sp_text_hint="@string/select_gender"
            app:sp_text_label="@string/gender" />

        <LinearLayout
            android:id="@+id/container_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_gender"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/main"
                android:text="@string/save"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:text="@string/view_data"
                android:textColor="@color/black"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
