<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.ViewDataFragment">

    <TextView
        android:id="@+id/txt_title"
        style="@style/InterFontStyleSemiBold600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_records"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_delete_all"
        app:layout_constraintEnd_toStartOf="@id/btn_delete_all"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_delete_all"
        tools:text="Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="7dp"
        android:text="@string/delete_all"
        android:textColor="@color/red"
        app:icon="@android:drawable/ic_delete"
        app:iconTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_all" />

    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:indeterminateTint="@color/main"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_all" />

    <LinearLayout
        android:id="@+id/container_no_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_all"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:src="@drawable/no_items" />

        <TextView
            style="@style/InterFontStyleRegular400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_saved_users"
            android:textColor="@color/grey_black"
            android:textSize="16sp"
            tools:text="Title" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:text="@string/back"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_back"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>